[Build] Added script.js file for changingName func

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
                 <a href="#">About</a>
-                <a href="#">Services</a>
+                <a href="#">Projects</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
             </nav>
@@ -23,20 +24,19 @@
         <section class="home">
             <div class="home-content">
                 <h1>Welcome, I'm José García</h1>
+                <h2>But you can call me <span id="changingName"></span></h2>
                 <h3>iOS Developer</h3>
-                <p>Passionate Mobile App Developer | iOS Developer 
-                | Tech Enthusiast | Continuous Learner | Aspiring Traveler.
+                <p>iOS Developer | Mobile App Developer | Tech Enthusiast | Continuous Learner | Aspiring Traveler.
                 </p>
                 <div class="btn-box">
-                    <a href="#">Hire Me</a>
-                    <a href="#">Let's Talk</a>
+                    <a href="#">About me</a>
+                    <a href="#">My Projects</a>
                 </div>
             </div>
-
             <div class="home-sci">
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram' ></i></a>
             </div>
         </section>
     </body>
