[Feature] Added mobile responsive website update.

--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <title>Joseph's Personal Portfolio Website</title>
-    </head>
-    <body>
-        <header class="header">
-            <a href="#" class="logo">Joseph.</a>
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Projects</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
-            </nav>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Joseph's Personal Portfolio Website</title>
+</head>
+<body>
+    <header class="header">
+        <a href="index.html" class="logo">Joseph.</a>
+        <button class="navbar-toggle" id="navbar-toggle">☰</button>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Projects</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 
-        <section class="home">
-            <div class="home-content">
-                <h1>Welcome, I'm José García</h1>
-                <h2>But you can call me <span id="changingName"></span></h2>
-                <h3>iOS Developer</h3>
-                <p>iOS Developer | Mobile App Developer | Tech Enthusiast | Continuous Learner | Aspiring Traveler.
-                </p>
-                <div class="btn-box">
-                    <a href="#">About me</a>
-                    <a href="#">My Projects</a>
-                </div>
+    <section class="home">
+        <div class="home-content">
+            <h1>Welcome, I'm José García</h1>
+            <h2>But you can call me <span id="changingName"></span></h2>
+            <h3>iOS Developer</h3>
+            <p>iOS Developer | Mobile App Developer | Tech Enthusiast | Continuous Learner | Aspiring Traveler.</p>
+            <div class="btn-box">
+                <a href="#">About me</a>
+                <a href="#">My Projects</a>
             </div>
-            <div class="home-sci">
-                <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram' ></i></a>
-            </div>
-        </section>
-    </body>
+        </div>
+        <div class="home-sci">
+            <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
+        </div>
+    </section>
+</body>
 </html>
