--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="navbar-toggle" id="navbar-toggle">☰</button>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
+            <a href="aboutMe.html">About</a>
             <a href="#">Projects</a>
             <a href="#">Portfolio</a>
             <a href="#">Contact</a>
