--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="active">Home</a>
             <a href="aboutMe.html">About</a>
             <a href="#">Projects</a>
-            <a href="#">Portfolio</a>
+            <a href="#">Experience</a>
             <a href="#">Contact</a>
         </nav>
     </header>
@@ -29,7 +29,7 @@
             <h3>iOS Developer</h3>
             <p>iOS Developer | Mobile App Developer | Tech Enthusiast | Continuous Learner | Aspiring Traveler.</p>
             <div class="btn-box">
-                <a href="#">About me</a>
+                <a href="#">My Experience</a>
                 <a href="#">My Projects</a>
             </div>
         </div>
