--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="aboutMe.html">About</a>
             <a href="#">Projects</a>
             <a href="#">Experience</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
@@ -32,12 +32,23 @@
                 <a href="#">My Experience</a>
                 <a href="#">My Projects</a>
             </div>
-        </div>
-        <div class="home-sci">
-            <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <div class="home-sci">
+                    <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
+                </div>
         </div>
     </section>    
+
+    <section class="about">
+        <div class="about-content">
+            <h1>About Me</h1>
+            <p>Hi, I'm José García, an iOS Developer based in Mexico. I have a passion for creating intuitive and dynamic mobile applications. With a background in software engineering and a love for technology, I am constantly learning and staying updated with the latest trends in mobile app development. My goal is to work in some of the biggest cities in the world and contribute to impactful projects.</p>
+            <p>When I'm not coding, you can find me at the gym, watching streams, gaming, or reading books. I also love traveling and exploring new places. Let's connect and create something amazing together!</p>
+            <div class="btn-contact">
+                <a href="contact.html">Contact Me</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
