[Update] Update the aboutMePage and css front page

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>About Me - Joseph's Personal Portfolio</title>
 </head>
 <body>
@@ -31,6 +34,53 @@
                 <a href="contact.html">Contact Me</a>
             </div>
         </div>
+    </section>
+    <section>
+        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+            <div class="parallax-bg" style="background-image: url(https://i.postimg.cc/rs3t8HX9/IMG-4802.jpg);" data-swiper-parallax="-23%"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="title" data-swiper-parallax="-300">Chilling</div>
+                <div class="subtitle" data-swiper-parallax="-200">Off hours</div>
+                <div class="text" data-swiper-parallax="-100">
+                  <p>
+                    In my off hours, I love to take a breather and unwind by playing on my gaming PC
+                     or watching some anime and TV series. I often prepare some snacks to enjoy, 
+                     and I usually go out with my friends to have a great time. Whether it's exploring 
+                     new places, trying out different activities, or just hanging out, these moments 
+                     help me relax and recharge.
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="title" data-swiper-parallax="-300">Gaming</div>
+                <div class="subtitle" data-swiper-parallax="-200">Weekend gamer</div>
+                <div class="text" data-swiper-parallax="-100">
+                  <p>
+                    
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="title" data-swiper-parallax="-300">Developing</div>
+                <div class="subtitle" data-swiper-parallax="-200">What you resist persists.</div>
+                <div class="text" data-swiper-parallax="-100">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
+                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
+                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
+                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
+                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
     </section>
 </body>
 </html>
