--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <section class="home">
         <div class="home-content">
             <h1></h1>
-            <h2>But you can call me <span id="changingName"></span></h2>
+            <h2><span id="changingName"></span></h2>
             <h3></h3>
             <p></p>
             <div class="btn-box">
                 <a href="#">My Experience</a>
                 <a href="#">My Projects</a>
             </div>
-                <div class="home-sci">
-                    <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
-                </div>
+            <div class="home-sci">
+                <a href="https://github.com/Josephtg107" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/josephtg107/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/josephtg107/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
+            </div>
         </div>
     </section>    
 
