--- a/contact.html
+++ b/contact.html
@@ -2,24 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Contact - Joseph's Personal Portfolio</title>
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
-        <a href="index.html" class="logo">Joseph.</a>
-        <button class="navbar-toggle" id="navbar-toggle">☰</button>
+        <a href="#" class="logo">MyWebsite</a>
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="#" class="active">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Experience</a>
-            <a href="#">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
         </nav>
+        <button class="navbar-toggle" onclick="toggleNavbar()">☰</button>
     </header>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="contact-content">
+            <h1>Contact Me</h1>
+            <p>If you have any questions, feel free to reach out through the form below or via email at contact@mywebsite.com.</p>
+            
+            <form class="contact-form">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <div class="btn-contact">
+                    <a href="#" onclick="submitForm()">Send Message</a>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <script>
+        function toggleNavbar() {
+            var navbar = document.querySelector('.navbar');
+            navbar.classList.toggle('active');
+        }
+
+        function submitForm() {
+            // Placeholder function for form submission logic
+            alert('Form submitted!');
+        }
+    </script>
 </body>
 </html>
