[Update] Updated about me Text

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -36,7 +36,7 @@
     </section>
     <section>
         <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
-            <div class="parallax-bg" style="background-image: url(https://i.postimg.cc/rs3t8HX9/IMG-4802.jpg);" data-swiper-parallax="-23%"></div>
+            <div class="parallax-bg" style="background-image: url(https://i.postimg.cc/xd2MJBkx/IMG-4883.jpg);" data-swiper-parallax="-23%"></div>
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="title" data-swiper-parallax="-300">Chilling</div>
@@ -55,7 +55,11 @@
                     <div class="title" data-swiper-parallax="-300">Gaming</div>
                     <div class="subtitle" data-swiper-parallax="-200">Weekend gamer</div>
                     <div class="text" data-swiper-parallax="-100">
-                        <p>Content for Gaming slide...</p>
+                        <p>
+                            In my downtime, I love diving into massive multiplayer games, as well as horror
+                            and story-based titles on my gaming PC. I often play these immersive games with
+                            my friends. We usually team up in first-person shooters and silly games where we
+                             laugh non-stop for hours.</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -63,13 +67,11 @@
                     <div class="subtitle" data-swiper-parallax="-200">What you resist persists.</div>
                     <div class="text" data-swiper-parallax="-100">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                            dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                            laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                            Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                            Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                            ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                            tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                            In my free time, I love working on developing new apps and projects. As an iOS developer,
+                            creating innovative solutions and exploring new technologies is both a hobby and a passion.
+                            I often spend hours coding and testing, driven by the excitement of bringing new ideas to life.
+                            Whether it's designing a sleek user interface or optimizing performance, I enjoy the challenge 
+                            and creativity involved.
                         </p>
                     </div>
                 </div>
