[Update] Updated front page animations

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,8 +17,8 @@
         <button class="navbar-toggle" id="navbar-toggle">☰</button>
         <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="#" class="active">About</a>
-            <a href="#">Projects</a>
+            <a href="aboutMe.html" class="active">About</a>
+            <a href="">Projects</a>
             <a href="#">Experience</a>
             <a href="#">Contact</a>
         </nav>
