[JS]Updated swiper JS for functionality

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -36,7 +36,7 @@
     </section>
     <section>
         <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
-            <div class="parallax-bg" style="background-image: url(https://i.postimg.cc/xd2MJBkx/IMG-4883.jpg);" data-swiper-parallax="-23%"></div>
+            <div class="parallax-bg" style="background-image: url(https://i.postimg.cc/1zn2Xnqc/Basketball-background.png);" data-swiper-parallax="-23%"></div>
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="title" data-swiper-parallax="-300">Chilling</div>
