[Comment] Added Contact html file

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,7 +20,7 @@
             <a href="aboutMe.html" class="active">About</a>
             <a href="">Projects</a>
             <a href="#">Experience</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
