[Update] Name change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo">Joseph.</a>
+        <a href="index.html" class="logo">DevTed</a>
         <button class="navbar-toggle" id="navbar-toggle">☰</button>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
