--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="aboutMe.html">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Experience</a>
+            <a href="Experience/projects.html">Projects</a>
+            <a href="Experience/experience.html">Experience</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
@@ -28,8 +28,8 @@
             <h3></h3>
             <p></p>
             <div class="btn-box hidden">
-                <a href="#" class="neon">My Experience</a>
-                <a href="#" class="neon">My Projects</a>
+                <a href="Experience/experience.html" class="neon">My Experience</a>
+                <a href="Experience/projects.html" class="neon">My Projects</a>
             </div>
         </div>
     </section>
